# nrf_training_tasks

fsm/: CMakeLists.txt  prj.conf
fsm/src/: button.c  button.h  fsm.c  fsm.h  fsm_base.c  fsm_base.h  led.c  led.h  log.c  main.c
fsm_traffic_light/: CMakeLists.txt
fsm_traffic_light/src/: button.c  button.h  fsm.c  fsm.h  fsm_base.h  led.c  led.h  log.h  main.c  timer.c  timer.h
fund_less2_exer1/src/: main.c
fund_less2_exer2/src/: main.c
fund_less3_exer1/src/: main.c  myfunction.c
fund_less4_exer1/src/: main.c
fund_less4_exer2/src/: main.c
fund_less7_exer1/src/: main.c
fund_less7_exer2/: prj.conf
fund_less7_exer3/src/: main.c
fund_less8_exer1/src/: main.c
fund_less8_exer2/: prj.conf
fund_less8_exer2/src/: main.c
